<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/mainLayout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
>

<TextView
android:id="@+id/selectCelcius"
android:layout_width="100px"
android:layout_height="wrap_content"
android:text="@string/selectCelciusLbl"
/> 

<RadioGroup 
android:id="@+id/convSelect"
android:layout_height="wrap_content"
android:layout_width="fill_parent"
android:orientation="vertical"
>
<RadioButton 
android:id="@+id/celciusToFahr"
android:checked="true"
android:text="@string/celciusToFahrLbl"
/>
<RadioButton 
android:id="@+id/FahrTocelcius"
android:checked="false"
android:text="@string/fahrToCelciusLbl"
/>
</RadioGroup>
<LinearLayout
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
<TextView
android:id="@+id/tempInLbl"
android:layout_width="100px"
android:layout_height="wrap_content"
android:text="@string/tempLbl"
>
</TextView>

<Spinner
android:id="@+id/inputSpinner"
android:layout_width="125px"
android:layout_height="50px"
android:layout_marginLeft="0px"
>
</Spinner>

<TextView
android:id="@+id/tempOut"
android:layout_width="100px"
android:layout_height="wrap_content"
android:layout_marginLeft="10px"
android:textSize="30px"
android:text="@string/tempOut"
>
</TextView>

</LinearLayout>
</LinearLayout>